[tool.poetry]
name = "sarima-lstm-crime-app"
version = "0.1.0"
description = "A crime forecasting application using SARIMA and LSTM models."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"
gradio = "^2.0"
torch = "^1.9"
statsmodels = "^0.13"
pmdarima = "^1.8"
folium = "^0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"